--- a/style.css
+++ b/style.css
@@ -69,7 +69,43 @@ button {
 }
 
 h1 {
-    text-align: center;
+    text-align: left;
+    line-height: 50px;
+    font-size: 2rem;
+}
+
+h2 {
+    text-align: left;
+    line-height: 50px;
+    font-size: 1.5rem;
+}
+
+/*
+br {
+content: "";
+margin: 2em;
+display: block;
+font-size: 24%;
+}*/
+
+li{
+    text-decoration: none;
+    color: inherit;
+    line-height: 30px;
+    font-size: 1rem;
+    font-weight:normal
+}
+
+h3 {
+    text-decoration: none;
+    color: inherit;
+    line-height: 30px;
+    font-size: 1rem;
+    font-weight:normal
+}
+
+.missions-suaps {
+    color: rgb(19, 16, 206);
 }
 
 .container {
@@ -245,11 +281,15 @@ br {
     user-select: none;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 700px) {
+    .right-container {
+        display: none;
+    }
 
     .logo {
+        display: block;
         float: left;
-        text-indent: -140px;
+        text-indent: -150px;
     }
 
     #hamburger {
@@ -266,7 +306,6 @@ br {
         position: absolute;
         top: 87px;
         left: 0;
-        min-height: 100vh;
         width: 100vw;
     }
 
@@ -325,11 +364,6 @@ br {
     }
 }
 
-@media (max-width: 600px) {
-    .right-container {
-        display: none;
-    }
-}
 
 table {
     border-collapse: collapse;
@@ -344,7 +378,6 @@ body {
 }
 
 a {
-    color: #0e1115;
     cursor: pointer
 }
 
