--- a/style.css
+++ b/style.css
@@ -133,10 +133,6 @@ h3 {
     border-right: var(--border);
 }
 
-.menu-bar li:nth-child(n + 2) ul:nth-child(1) {
-    border-bottom: var(--border);
-}
-
 .menu-bar .dropdown-link-title {
     font-weight: 600;
 }
@@ -169,10 +165,10 @@ h3 {
     display: flex;
     flex-direction: column;
     min-width: 230px;
-    background-color: #292c2f;
+    background-color: #33383b;
     border-radius: 10px;
     position: absolute;
-    top: 36px;
+    top: 45px;
     z-index: 1;
     visibility: hidden;
     opacity: 0;
@@ -185,14 +181,13 @@ h3 {
     visibility: visible;
     opacity: 1;
     transform: scale(1) translateX(5px);
-    
 }
 
 .dropdown ul {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    padding: 1.2rem;
+    padding: 1.1rem;
     font-size: 0.95rem;
 }
 
@@ -320,7 +315,7 @@ br {
         display: none;
         min-width: 100%;
         border: none !important;
-        border-radius: 5px;
+        border-radius: 10px;
         position: static;
         top: 0;
         left: 0;
@@ -336,7 +331,7 @@ br {
     }
 
     .dropdown ul {
-        padding-left: 0.3rem;
+        padding-left: 1.5rem;
     }
 
     .menu-bar {
