--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,7 @@ a:hover {
     text-align: center;
     font-size: 2.3em;
     margin-bottom: 30px;
+    font-weight: 1000;
 }
 
 .containers h3.zdpjvzelk {
