--- a/css/footer.css
+++ b/css/footer.css
@@ -18,7 +18,7 @@
 }
 
 
-.footer-distributed .footer-left p {
+.footer-distributed p {
     color: #8f9296;
     font-size: 14px;
     margin: 0;
@@ -31,6 +31,7 @@
     margin-top: -17px;
     max-width: 180px;
 }
+
 
 .footer-distributed .footer-right a {
     display: inline-block;
