--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: #203656;
+    color: #2b72fb;
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     line-height: 1.4;
@@ -310,7 +310,7 @@ button:focus {
     color: #fff;
     border: 0;
     border-radius: 50%;
-    background-color: #6e72fc;
+    background-color: #2b72fb;
     background-image: linear-gradient(315deg, #6e72fc 0%, #2b72fb 74%);
     background-size: auto 200%;
     display: inline-flex;
@@ -332,7 +332,7 @@ button:focus {
 
 .social-icons a {
     font-size: 16px;
-    color: #203656;
+    color: #2b72fb;
 }
 
 .social-icons a:hover {
@@ -655,7 +655,7 @@ button:focus {
 }
 
 .post .meta a:hover {
-    color: #570f75;
+    color: #2b72fb;
 }
 
 .post .meta i {
