--- a/css/footer.css
+++ b/css/footer.css
@@ -17,10 +17,10 @@
     padding: 45px 50px;
 }
 
-#footer-distri {
+/*#footer-distri {
     position:fixed;
     bottom:0;
-}
+}*/
 
 
 .footer-distributed p {
