--- a/css/style.css
+++ b/css/style.css
@@ -835,7 +835,15 @@ a:hover {
 
 .containers .title {
     text-align: center;
-    margin-block-end: 40px;
+    margin-block-end: 30px;
+}
+
+.titless h3 {
+    margin-block-end: 30px;
+    text-align: center;
+    font-size: 2.3em;
+    margin-bottom: 30px;
+    font-weight: 1000;
 }
 
 .containers h3 {
