--- a/css/contact.css
+++ b/css/contact.css
@@ -6,13 +6,28 @@ h1 {
 
 li.contact a {
     color: #2d2f31;
+    font-size: 1.2rem;
 }
 
 nav.nav-contact {
-    width: 300px;
-    background: #d9d9d9;
+    width: 330px;
 }
 
+ul.all-ul {
+    align-items: center;
+}
+
+
+@media screen and (max-width: 800px) {
+    ul.all-ul {
+        display: flexbox;
+        align-items: center;
+    }
+
+    nav.nav-contact {
+        width: 335px;
+    }
+}
 
 span {
     padding: 30px;
@@ -36,6 +51,7 @@ span::after {
     overflow: hidden;
     text-align: center;
     transition: height .4s ease;
+    margin-bottom: 25px;
 }
 
 .slide li {
@@ -46,6 +62,7 @@ span::after {
     position: absolute;
     opacity: 0;
     height: 0px;
+    margin-top: -50px;
 }
 
 #touch:checked+.slide {
