--- a/css/footer.css
+++ b/css/footer.css
@@ -8,7 +8,8 @@
 }
 
 .footer-distributed {
-    background-color: #292c2f;
+    border-top: 1px solid #ebebeb;
+    background-color: none;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     width: 100%;
@@ -21,13 +22,6 @@
     position:fixed;
     bottom:0;
 }*/
-
-
-.footer-distributed p {
-    color: #8f9296;
-    font-size: 14px;
-    margin: 0;
-}
 
 /* liens footer */
 
