--- a/css/styles.css
+++ b/css/styles.css
@@ -623,11 +623,6 @@ button:focus {
     position: relative;
 }
 
-.post .thumb.rounded .inner {
-    border-radius: 10px;
-    overflow: hidden;
-}
-
 .post .thumb img {
     transform: scale(1);
     transition: all 0.3s ease-in-out;
@@ -1571,7 +1566,7 @@ p {
     top: 20px;
     z-index: 1;
     background-color: #6e72fc;
-    background-image: linear-gradient(315deg, #6e72fc 0%, #ad1deb 74%);
+    background-image: linear-gradient(315deg, #393edb 0%, #e21717 74%);
     background-size: 200% auto;
     transition: all 0.3s ease-in-out;
 }
