--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,11 @@
     margin-top: 60px;
 }
 
+body {
+    background-color: #1a202c;
+    color: #fff;
+}
+
 @media (min-width: 1200px) {
     .container-xl {
         max-width: 1140px;
