--- a/css/styles1.css
+++ b/css/styles1.css
@@ -47,7 +47,7 @@ a {
 }
 
 a:hover {
-    color: #203656;
+    color: white;
 }
 
 a:focus {
@@ -235,7 +235,7 @@ button:focus {
 }
 
 .canvas-menu .vertical-menu li.openmenu>a {
-    color: #203656;
+    color: white;
 }
 
 .canvas-menu .vertical-menu li.openmenu .switch {
@@ -250,7 +250,7 @@ button:focus {
 }
 
 .canvas-menu .vertical-menu li a {
-    color: #203656;
+    color: white;
     font-family: "Poppins", sans-serif;
     font-size: 14px;
     font-weight: 400;
@@ -278,7 +278,7 @@ button:focus {
 }
 
 .canvas-menu .vertical-menu li.active .submenu a:hover {
-    color: #203656;
+    color: white;
 }
 
 .canvas-menu .submenu {
@@ -1143,7 +1143,7 @@ li.list-inline-item {
 }
 
 .widget ul.list li a {
-    color: #203656;
+    color: white;
     font-weight: 700;
 }
 
@@ -1183,7 +1183,7 @@ li.list-inline-item {
 .newsletter-headline {
     font-size: 15px;
     font-weight: bold;
-    color: #203656;
+    color: white;
     display: block;
 }
 
