--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 body {
     font-family: inherit;
     background-color: #1a202c;
-    color: var(--dark-grey);
+    color: white;
     letter-spacing: -0.4px;
 }
 
