--- a/css/style.css
+++ b/css/style.css
@@ -244,19 +244,58 @@ h3 {
 }
 
 .menu-bar .nav-link {
-    text-decoration: none;
     font-size: 1.2rem;
     letter-spacing: -0.6px;
-    padding: 0.3rem;
+    padding-bottom: 0.5rem;
     min-width: 60px;
     margin: 0 0.6rem;
     font-weight: 600;
-    color: #fff;
+    color: inherit;
+    text-decoration: none;
+    background: linear-gradient(to top, white 0%, white 8%, transparent 5.01%) no-repeat left bottom / 0 100%;
+    transition: background-size .3s;
 }
 
-.menu-bar .nav-link:hover,
+/*.menu-bar .nav-link:hover,
 .dropdown-link:hover {
     color: var(--primary-color);
+}*/
+
+.dropdown-link {
+    text-decoration: none;
+    display: flex;
+    gap: 0.5rem;
+    padding: 0.5rem 0;
+    border-radius: 7px;
+    transition: 0.1s ease-in-out;
+}
+
+.dropdown-link {
+    color: inherit;
+    text-decoration: none;
+    background: linear-gradient(to top, white 0%, white 8%) no-repeat left bottom / 0 100%;
+    
+    transition: background-size .3s;
+}
+
+.nav-link:hover {
+    background-size: 100% 100%;
+    animation: underlined 1.5s both;
+}
+
+@keyframes underlined {
+    
+    from {
+        background-size: 100% 100%;
+    }
+
+    50% {
+        background-size: 0% 100%;
+    }
+
+    100% {
+        background-size: 100% 100%;
+    }
 }
 
 .nav-start,
@@ -301,19 +340,11 @@ h3 {
 }
 
 .dropdown-btn {
+    padding-top: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 0.15rem;
-}
-
-.dropdown-link {
-    text-decoration: none;
-    display: flex;
-    gap: 0.5rem;
-    padding: 0.5rem 0;
-    border-radius: 7px;
-    transition: 0.1s ease-in-out;
 }
 
 .right-container {
