--- a/css/style.css
+++ b/css/style.css
@@ -273,9 +273,12 @@ h3 {
 .dropdown-link {
     color: inherit;
     text-decoration: none;
-    background: linear-gradient(to top, white 0%, white 8%) no-repeat left bottom / 0 100%;
-    
-    transition: background-size .3s;
+}
+
+@media (max-width: 800px) {
+    .menu-bar .nav-link{
+        background: none;
+    }
 }
 
 .nav-link:hover {
@@ -287,14 +290,22 @@ h3 {
     
     from {
         background-size: 100% 100%;
+        background-position: bottom right;
     }
 
     50% {
         background-size: 0% 100%;
+        background-position: bottom right;
+    }
+
+    50.01% {
+        background-size: 0% 100%;
+        background-position: bottom left;
     }
 
     100% {
         background-size: 100% 100%;
+        background-position: bottom left;
     }
 }
 
