--- a/css/sports.css
+++ b/css/sports.css
@@ -99,6 +99,7 @@
   .cord__heading {
     color: var(--text-lighter);
     font-size: 1.9rem;
+    font-weight: bold;
     text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
     line-height: 1.4;
     word-spacing: 100vw;
