--- a/css/styles.css
+++ b/css/styles.css
@@ -430,7 +430,7 @@ button:focus {
 
 .hero::after {
     content: "";
-    background: #203656;
+    background: #fff;
     display: block;
     left: 0;
     opacity: 0.8;
@@ -583,7 +583,7 @@ button:focus {
 
 .featured-post-lg .thumb::after {
     content: "";
-    background: #203656;
+    background: #fff;
     display: block;
     height: 100%;
     left: 0;
@@ -925,7 +925,7 @@ button:focus {
 
 .post.post-over-content .thumb::after {
     content: "";
-    background: #203656;
+    background: #fff;
     display: block;
     height: 100%;
     left: 0;
